backend vercel json change slightly

--- a/server/vercel.json
+++ b/server/vercel.json
@@ -4,7 +4,7 @@
   "routes": [{ "src": "/(.*)", "dest": "/index.js" }],
   "functions": {
     "index.js": {
-      "includeFiles": "models/**/*.js"
+      "includeFiles": "Models/**/*.js"
     }
   }
 }
