--- a/client/package.json
+++ b/client/package.json
@@ -13,13 +13,16 @@
     "@gsap/react": "^2.1.2",
     "@tailwindcss/vite": "^4.1.11",
     "axios": "^1.10.0",
+    "chart.js": "^4.5.0",
     "gsap": "^3.13.0",
     "moment": "^2.30.1",
     "react": "^19.1.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.3",
     "react-toastify": "^11.0.5",
+    "socket.io-client": "^4.8.1",
     "tailwindcss": "^4.1.11",
     "zustand": "^5.0.6"
   },
