--- a/client/package.json
+++ b/client/package.json
@@ -18,10 +18,13 @@
     "moment": "^2.30.1",
     "react": "^19.1.0",
     "react-chartjs-2": "^5.3.0",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.3",
     "react-toastify": "^11.0.5",
+    "recharts": "^3.1.0",
     "socket.io-client": "^4.8.1",
     "tailwindcss": "^4.1.11",
     "zustand": "^5.0.6"
